[tool.poetry]
name = "coronatank"
version = "0.1.0"
description = "A small tank game based on pygame."
authors = ["Sylvain Roy <sylvain.roy@m4x.org>"]

[tool.poetry.dependencies]
python = "^3.7.7"
pygame = "^1.9.6"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
ipython = "^7.13.0"
jedi = "^0.17.0"
autopep8 = "^1.5.2"
flake8 = "^3.7.9"
importmagic = "^0.1.7"
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
